@@ -17,6 +17,7 @@ General:
 * Use DinguxFileManager as default on all platforms
 * Use gptokeyb as a fake keyboard for OpenBOR
 * Bump Retroarch to 1.9.1
+* API keys for Emulationstation have been changed, please refer to the emuelec-emulationstation/package.mk
 
 Additions: 
 
@@ -25,7 +26,7 @@ Additions:
 * Added Imagemagick (mainly for screenshot manipulation from CLI)
 * Added logos to the ports (Thanks to Dim!)
 * Added vertical aspect ratio option to OGA/S
-* Added gptokeyb to enable video controls on all devices with SDL support!
+* Added gptokeyb to enable video controls on all devices with SDL support! with configuration support
 * Replace jslisten with gptokeyb to kill emulators
 * Added easyrpg to es_systems.cfg
 * Added Ecwolf with support for mods
@@ -51,8 +52,10 @@ Fixes:
 * Fixed some errors messages were not wrapped and could not be read
 * Fixed OpenBor would not work after playing one game
 * Fixed DevilutionX character voices were wrong
+* Fixed DevilutionX mouse emulation was not working
 * ARM32 interpreter is now symlinked so no need for patchelf
 * Fix some TimeZones not displaying/working correctly (#546)
+* Fix hand-held bezels for 720p and 1080p
 
 
 This version includes a big change on how binaries and scripts are stored, basically to deal with the issue of people not reading how to properly update 
